@startuml diagrama_de_classe_corrigido
!theme vibrant

title Diagrama de Classes - Afrodite Calendar (Corrigido)

package "DTOs" {
  class "ContatoRequest" <<DTO>>
  class "LoginRequest" <<DTO>>
}

package "Controllers" {
  class AgendaController {
    - agendaService: AgendaService
    + listarContatos(auth)
    + adicionarContato(auth, req)
    + removerContato(auth, tel)
  }
  AgendaController ..> "ContatoRequest" : usa

  class AuthController {
    - authService: AuthService
    + handleLogin(req)
  }
  AuthController ..> "LoginRequest" : usa
}

package "Services & Security" {
  class AgendaService {
    - COLLECTION_NAME: String
    + adicionarContato(uid, contato)
    + getAgendaDeUsuario(uid)
    + removerContatoDeUsuario(uid, tel)
  }

  class AuthService {
    - firebaseApiKey: String
    + loginAndGetIdToken(email, pass)
  }
  
  class FirebaseAuthenticationFilter {
    + doFilterInternal(...)
  }
  
  class SecurityConfig {
    + securityFilterChain(http)
  }
}

package "Model (Core)" {
  class FabricaAgenda <<Singleton>> {
    + getInstancia()
    + criaAgenda(tipo)
  }

  interface IF_Agenda {
    + adicionaContato(contato)
    + getContato(telefone)
    + removeContato(telefone)
    + getListaAgenda()
  }

  interface IF_Contato {
    + getNome()
    + getTelefone()
  }

  class Contato implements IF_Contato {
    - nome: String
    - telefone: String
  }
  
  class AgendaList implements IF_Agenda {
    - listaContato: List<IF_Contato>
  }
  
  class AgendaMap implements IF_Agenda {
    - listaContato: Map<String, IF_Contato>
  }
}

' Relacionamentos
AgendaController o--> AgendaService
AuthController o--> AuthService

AgendaService ..> FabricaAgenda : usa >
AgendaService "1" *-- "1" IF_Agenda
FabricaAgenda ..> AgendaList : cria
FabricaAgenda ..> AgendaMap : cria

AgendaService ..> "Firebase Firestore" : usa
AuthService ..> "Firebase Auth API" : usa

SecurityConfig ..> FirebaseAuthenticationFilter : configura

@enduml